Fixes row gaps in batch/cell
(cherry picked from commit dbce124561b64f40194a8687c14d837eeff1086f)

--- a/styles/widgets/material/gridBase.material.less
+++ b/styles/widgets/material/gridBase.material.less
@@ -914,6 +914,14 @@
             }
         }
 
+        .dx-data-row {
+            td:not(.dx-cell-modified):not(.dx-validation-pending) {
+                .dx-highlight-outline {
+                    padding: 0;
+                }
+            }
+        }
+
         .dx-row-removed > td {
             background-color: @datagrid-row-removed-bg;
             border-top: 1px solid @datagrid-cell-modified-border-color;
